# finances-api

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.cfg
app/: __init__.py  config.py  main.py
app/routers/: payments.py
